<?php declare(strict_types = 1);

namespace App\DesignPatternsBasics;

class DoMath
{
    
}
