<?php declare(strict_types = 1);

namespace App\DesignPatternsBasics;

class InheritMath extends DoMath
{
    
}
